--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,11 @@
-<p>
-  header works!
-</p>
+<ion-header no-border>
+  <ion-toolbar>
+
+    <ion-buttons slot="start">
+      <ion-back-button text="" [defaultHref]="backPath"></ion-back-button>
+    </ion-buttons>
+
+    <ion-title slot="start"> {{ titulo }} </ion-title>
+    <ion-button color="danger" size="small" (click)="logout()" slot="end">{{ userName }} <ion-icon name="log-out" class="logoutIcon"></ion-icon></ion-button>
+  </ion-toolbar>
+</ion-header>
