--- a/src/app/components/producto-form/producto-form.component.html
+++ b/src/app/components/producto-form/producto-form.component.html
@@ -1,3 +1,20 @@
-<p>
-  producto-form works!
-</p>
+<form #productoForm="ngForm">
+  <ion-item>
+    <ion-label color="primary">Producto</ion-label>
+    <ion-input [(ngModel)]="producto.nombre" name="nombre" type="text" required></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label color="primary">Precio</ion-label>
+    <ion-input [(ngModel)]="producto.precio" name="precio" type="number" required class="ion-text-end"></ion-input>
+  </ion-item>
+
+  <ion-row>
+    <ion-col>
+      <ion-button [disabled]="!productoForm.valid" (click)="processProducto()" type="submit" color="primary"
+        expand="block">
+        {{ submitBtn }}
+      </ion-button>
+    </ion-col>
+  </ion-row>
+</form>
