--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Home</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header titulo="Home" backPath="/Auth-tabs"></app-header> <!--componente header de la carpeta components-->
 
 <ion-content>
   <ion-card>
