--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,4 +1,4 @@
-<app-header titulo="Home" backPath="/Auth-tabs"></app-header> <!--componente header de la carpeta components-->
+<app-header titulo="Home" backPath="/auth-tabs"></app-header> <!--componente header de la carpeta components-->
 
 <ion-content>
   <ion-card>
