--- a/src/app/pages/producto-add/producto-add.page.html
+++ b/src/app/pages/producto-add/producto-add.page.html
@@ -1,4 +1,4 @@
-<app-header titulo="Agregar" backPath="/Auth-tabs/productos"></app-header>
+<app-header titulo="Agregar" backPath="/auth-tabs/productos"></app-header>
 
 <ion-content padding>
   <producto-form (fireAction)="save($event)" [isUpdate]="false" [producto]="producto"></producto-form>
