--- a/src/app/pages/producto-edit/producto-edit.page.html
+++ b/src/app/pages/producto-edit/producto-edit.page.html
@@ -1,4 +1,4 @@
-<app-header titulo="Editar"  backPath="/Auth-tabs/productos"></app-header>
+<app-header titulo="Editar"  backPath="/auth-tabs/productos"></app-header>
 
 <ion-content padding>
   <producto-form (fireAction)="update($event)" [isUpdate]="true" [producto]="producto"></producto-form>
