--- a/src/app/pages/productos/productos.page.html
+++ b/src/app/pages/productos/productos.page.html
@@ -1,4 +1,4 @@
-<app-header titulo="Productos" backPath="/Auth-tabs"></app-header> <!--componente header de la carpeta components-->
+<app-header titulo="Productos" backPath="/auth-tabs"></app-header> <!--componente header de la carpeta components-->
 
 <ion-content padding>
   <ion-list #lista *ngIf="productos && productos.length > 0">
